Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17468

--component-add lose pattern setting

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      --component-add lose the necessary component setting, for example

      # lfs setstripe -E 1M -L mdt /mnt/testfs/short
       # lfs setstripe --component-add -E 1G -C 100 /mnt/testfs/short
       # lfs getstripe /mnt/testfs/short
       /mnt/testfs/short
        lcm_layout_gen:    2
        lcm_mirror_count:  1
        lcm_entry_count:   2
          lcme_id:             1
          lcme_mirror_id:      0
          lcme_flags:          init
          lcme_extent.e_start: 0
          lcme_extent.e_end:   1048576
            lmm_stripe_count:  0
            lmm_stripe_size:   1048576
            lmm_pattern:       mdt
            lmm_layout_gen:    0
            lmm_stripe_offset: 0
          lcme_id:             2
          lcme_mirror_id:      0
          lcme_flags:          0
          lcme_extent.e_start: 1048576
          lcme_extent.e_end:   1073741824
            lmm_stripe_count:  100
            lmm_stripe_size:   1048576
            lmm_pattern:       raid0
            lmm_layout_gen:    0
            lmm_stripe_offset: -1
       # dd if=/dev/zero of=/mnt/testfs/short bs=1M count=10
       10+0 records in
       10+0 records out
       10485760 bytes (10 MB) copied, 0.661196 s, 15.9 MB/s
       # lfs getstripe /mnt/testfs/short
       /mnt/testfs/short
        lcm_layout_gen:    3
        lcm_mirror_count:  1
        lcm_entry_count:   2
          lcme_id:             1
          lcme_mirror_id:      0
          lcme_flags:          init
          lcme_extent.e_start: 0
          lcme_extent.e_end:   1048576
            lmm_stripe_count:  0
            lmm_stripe_size:   1048576
            lmm_pattern:       mdt
            lmm_layout_gen:    0
            lmm_stripe_offset: 0
          lcme_id:             2
          lcme_mirror_id:      0
          lcme_flags:          init
          lcme_extent.e_start: 1048576
          lcme_extent.e_end:   1073741824
            lmm_stripe_count:  4
            lmm_stripe_size:   1048576
            lmm_pattern:       raid0
            lmm_layout_gen:    0
            lmm_stripe_offset: 0
            lmm_objects:
            - 0: { l_ost_idx: 0, l_fid: [0x300000403:0x5b3:0x0] }
            - 1: { l_ost_idx: 1, l_fid: [0x340000403:0x5b3:0x0] }
            - 2: { l_ost_idx: 2, l_fid: [0x380000403:0x5b4:0x0] }
            - 3: { l_ost_idx: 3, l_fid: [0x3c0000403:0x5b4:0x0] }
      

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: